[gd_scene load_steps=5 format=3 uid="uid://c6cboogmok6nv"]

[ext_resource type="Script" path="res://pause_screen.gd" id="1_cqm7p"]
[ext_resource type="PackedScene" uid="uid://dmgphy0k3u0ym" path="res://ui/pause_menu.tscn" id="2_pak65"]
[ext_resource type="Script" path="res://classes/StateMachine.gd" id="3_kuejh"]
[ext_resource type="Script" path="res://classes/State.gd" id="4_khy3c"]

[node name="pause_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cqm7p")

[node name="pause_menu" parent="." instance=ExtResource("2_pak65")]

[node name="win_menu" parent="." instance=ExtResource("2_pak65")]

[node name="die_menu" parent="." instance=ExtResource("2_pak65")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_kuejh")

[node name="off" type="Node" parent="StateMachine"]
script = ExtResource("4_khy3c")

[node name="pause" type="Node" parent="StateMachine"]
script = ExtResource("4_khy3c")

[node name="die" type="Node" parent="StateMachine"]
script = ExtResource("4_khy3c")

[node name="win" type="Node" parent="StateMachine"]
script = ExtResource("4_khy3c")

[connection signal="state_entered" from="StateMachine/off" to="." method="_on_off_state_entered"]
[connection signal="state_exited" from="StateMachine/off" to="." method="_on_off_state_exited"]
